# activityTray

./: .gitignore  CMakeLists.txt  Messages.sh  README  README.md  readme
activityTray/: metadata.desktop
activityTray/contents/config/: config.qml
activityTray/contents/ui/: ActivityDelegate.qml  CompactRepresentation.qml  ExpandedRepresentation.qml  main.qml
activitypager/contents/config/: main.xml
activitypager/contents/ui/: ActivityDelegate.qml  ActivityListDelegate.qml  CompactRepresentation.qml  ConfigGeneral.qml  ExpandedRepresentation.qml  TaskDelegate.qml  main.qml
package/: metadata.desktop
